infra/k8s/k8s-infra/prometheus-dummy-exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus-dummy-exporter
  namespace: infra
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: prometheus-dummy-exporter
    spec:
      containers:
        - name: prometheus-dummy-exporter
          image: krakeprivatedocker/k8s-dummy-exporter:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9000
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-dummy-exporter
  namespace: infra
spec:
  clusterIP: 10.254.0.26
  ports:
    - port: 9000
      name: prometheus-exporter-get
    - port: 8080
      name: prometheus-exporter-set
  selector:
    app: prometheus-dummy-exporter
