infra/k8s/k8s-infra/ingress-controller-config.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    kubernetes.io/ingress.class: nginx
  name: prometheus-ingress
  namespace: infra
spec:
  tls:
  - secretName: infra-secret
  rules:
  - http:
      paths:
      - backend:
          serviceName: prometheus-server
          servicePort: 9090
        path: /prometheus
